# JuliaFractal-CUDA

./: CMakeLists.txt  README.md  julia.c  julia.cu
